<resources>
    <string name="app_name" translatable="false">Covid-19Tracking</string>
    <string name="covid19" translatable="false">Covid-19</string>
    <string name="today">Aujourd\'hui</string>
    <string name="general_information">Informations générales</string>
    <string name="cases_today">Cas confirmés</string>
    <string name="deaths_today">Décès</string>
    <string name="cases_total">Total des cas confirmés</string>
    <string name="deaths_total">Total des décès</string>
    <string name="recovered_total">Total des cas guéris</string>
    <string name="critical_total">Total des cas critiques</string>
    <string name="active_total">Total des cas actifs</string>
    <string name="choose_country">Séléctionnez votre pays</string>
    <string name="death_rate">Taux de mortalité</string>
    <string name="recovery_rate">Taux de guérison</string>
    <string name="french_language" translatable="false">Français</string>
    <string name="english_language" translatable="false">English</string>
    <string name="spanish_language" translatable="false">Español</string>
    <string name="choose_language_title">Choisissez votre langue</string>
    <string name="source_link" translatable="false">https://github.com/novelcovid/api</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="error_message_network_not_available">Vous n\'êtes pas connecté à Internet</string>
    <string name="update">Mettre à jour</string>
    <string name="later">Plus tard</string>
    <string name="message_new_version">Une nouvelle version est disponible sur Play Store.</string>
    <string name="info"><![CDATA[<p><strong>À propos de Covid-19Tracking</strong></p><br><p>Cette application vous permettra de suivre l\'évolution du Covid-19 dans le monde ainsi qu\'au sein de chaque pays. Ces chiffres sont extraits des données de l\'organisation mondiale de la santé. <p><font color=#00acee>#RestezChezVous</font><p/></p><br><p><strong>Développeur</strong></p><br><p>Cette application a été développé par Ali DOUIRI, pour plus d\'information, veuillez consulter le site web : <a href="www.alidouiri.com">www.alidouiri.com</a></p><br><p><strong>Sources</strong></p><br><a href="https://www.worldometers.info/coronavirus">www.worldometers.info/coronavirus</a><br><a href="https://github.com/novelcovid/api">www.github.com/novelcovid/api</a></string>]]></string>
</resources>